--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -885,7 +885,7 @@ namely values of $M_{Z'}=600, 800, 1000, 1200, 1400$~GeV.  This signal process h
   	\label{fig:DMH_zpincl}
 \end{figure}
 
-right\begin{figure}
+\begin{figure}
   \centering
   \unitlength=0.005\textwidth
   \begin{feynmandiagram}[modelMonoHSimplified]
