Added captions, moved Feynman diagrams
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@142 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -47,20 +47,22 @@ Section~\ref{subsec:MonojetLikeModels}.
     \fmf{photon}{o3,v2}
     \fmflabel{\Large ${V}$}{o3}
   \end{feynmandiagram}
+
   \vspace{\baselineskip}
   \caption{Sketch of benchmark models including a contact interaction
   for V+MET searches, adapted from~\cite{Nelson:2013pqa}. \label{fig:VPlusMET_EFT}}
 \end{figure}
+
 %
 The models considered can be divided in four categories:
 \begin{description}
  \item[Models including a contact operator, where the boson is radiated from the initial state] As depicted in
- the top diagram of Figure~\ref{fig:VPlusMET_EFT}, these models follow the nomenclature and theory
+ the left diagram of Figure~\ref{fig:VPlusMET_EFT}, these models follow the nomenclature and theory
  for the EFT benchmarks commonly used by MET+X searches~\cite{Goodman:2010ku}. These models
  have been used in past experimental searches~~\cite{Khachatryan:2014rwa, Aad:2014vka,Khachatryan:2014tva, Aad:2014vka,
  ATLAS:2014wra, Aad:2013oja}, and they will not be described here.
  \item[Models including a contact operator, where the boson is directly coupled to DM]
- Shown in the bottom of Figure~\ref{fig:VPlusMET_EFT},
+ Shown on the right-hand side of Figure~\ref{fig:VPlusMET_EFT},
  these models allow for a contact interaction vertex that directly couples the boson to Dark Matter.
  \item[Simplified models with a boson radiated either from the initial state or from the mediator] These models follow those
  already described in Section~\ref{subsec:MonojetLikeModels}, replacing the gluon with a boson.
