--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -133,7 +133,7 @@ benchmark points are shown in Table~\ref{table:x-sec}
 
 t-channel colored scalar, to be completed...
 
-\paragraph{Model implementation}
+\subsection{Model implementation}
 
 These models are generated at leading order with MadGraph 2.2.2, and parameter
 cards can be found on SVN \textbf{[TODO: Add SVN location]}.
