Added x-sec tables from Xiangyang
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@144 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -40,7 +40,8 @@ and order of unity.
 
 \subsection{Higgs+MET signal, vector mediator model}
 
-%TODO: this should be tabulated
+Figure~\ref{fig:zprimeXS} shows the cross sections in this vector mediator model in the $m_{med}$ 
+vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:zprimeXS}
 
 \begin{figure}[hbpt!]
 	\begin{center}
@@ -51,8 +52,107 @@ and order of unity.
 	\end{center}
 \end{figure}
 
-Figure~\ref{fig:zprimeXS} shows the cross sections in this mediator model in the $m_{med}$ 
-vs $m_{DM}$ plane..
+
+\begin{table}
+	\centering
+	\begin{tabular}{ccc}
+		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chi\bar{\chi}}$ [pb] \\ \hline
+		1 & 10 & 0.0003835 \\
+		1 & 20 & 0.0003177 \\
+		1 & 50 & 0.0001467 \\
+		1 & 100 & 0.0001065 \\
+		1 & 200 & 6.867e-05 \\
+		1 & 300 & 7.388e-05 \\
+		1 & 500 & 7.858e-05 \\
+		1 & 1000 & 4.327e-05 \\
+		1 & 2000 & 4.018e-05 \\
+		1 & 5000 & 3.336e-05 \\ \hline
+		10 & 10 & 3.603e-06 \\
+		10 & 15 & 1.477e-05 \\
+		10 & 50 & 0.0001547 \\
+		10 & 100 & 0.0001104 \\
+		10 & 5000 & 4.5e-05 \\ \hline
+		50 & 10 & 1.401e-07 \\
+		50 & 50 & 2.099e-07 \\
+		50 & 95 & 2.813e-05 \\
+		50 & 200 & 4.82e-05 \\
+		50 & 300 & 7.485e-05 \\
+		50 & 5000 & 3.384e-05 \\ \hline
+		150 & 10 & 4.833e-09 \\
+		150 & 295 & 3.65e-08 \\
+		150 & 500 & 6.463e-07 \\
+		150 & 5000 & 2.407e-08 \\ \hline
+		500 & 10 & 8.672e-12 \\
+		500 & 500 & 1.157e-11 \\
+		500 & 995 & 5.254e-10 \\
+		500 & 2000 & 7.138e-10 \\
+		500 & 5000 & 5.87e-10 \\ \hline
+		1000 & 10 & 5.946e-14 \\
+		1000 & 1000 & 1.546e-13 \\
+		1000 & 1995 & 8.316e-12 \\
+		1000 & 5000 & 2.112e-11 \\ \hline
+	\end{tabular}
+	\caption{ Cross section of the $pp \rightarrow h\chi\bar{\chi}$ process 
+		in units of pico-barn for the vector mediator model. 
+		\label{tab:zprimeXS}}
+\end{table}
+
+\subsection{Higgs+MET signal, scalar mediator model}
+
+Figure~\ref{fig:scalarXS} shows the cross sections of the $pp \rightarrow H\chi\bar{\chi}$ process 
+in this vector mediator model in the $m_{med}$ 
+vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:scalarXS}
+
+\begin{figure}[hbpt!]
+	\includegraphics[width=0.8\linewidth]{figures/EW/monoH/scalar_cross_section_new}
+	\caption{ \label{fig:scalarXS} Cross section of the $pp \rightarrow H\chi\bar{\chi}$ process 
+		in units of pico-barn for the scalar mediator model.}
+\end{figure}
+
+\begin{table}
+	\centering
+	\begin{tabular}{ccc}
+		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chi\bar{\chi}}$ [pb] \\ \hline
+		1 & 10 & 2.389 \\
+		1 & 20 & 2.483 \\
+		1 & 50 & 2.98 \\
+		1 & 100 & 2.881 \\
+		1 & 200 & 2.344 \\
+		1 & 300 & 2.041 \\
+		1 & 500 & 0.9328 \\
+		1 & 1000 & 0.1524 \\
+		1 & 2000 & 0.008919 \\
+		1 & 5000 & 1.39e-05 \\ \hline
+		10 & 10 & 0.01895 \\
+		10 & 15 & 0.7378 \\
+		10 & 50 & 2.929 \\
+		10 & 100 & 2.875 \\
+		10 & 5000 & 1.387e-05 \\ \hline
+		50 & 10 & 0.0003215 \\
+		50 & 50 & 0.01127 \\
+		50 & 95 & 0.2784 \\
+		50 & 200 & 1.868 \\
+		50 & 300 & 1.759 \\
+		50 & 5000 & 1.391e-05 \\ \hline
+		150 & 10 & 4.786e-06 \\
+		150 & 200 & 0.004841 \\
+		150 & 295 & 0.156 \\
+		150 & 500 & 0.575 \\
+		150 & 5000 & 1.391e-05 \\ \hline
+		500 & 10 & 6.296e-09 \\
+		500 & 500 & 2.855e-05 \\
+		500 & 995 & 0.008244 \\
+		500 & 2000 & 0.007899 \\
+		500 & 5000 & 1.355e-05 \\ \hline
+		1000 & 10 & 3.78e-11 \\
+		1000 & 1000 & 7.372e-07 \\
+		1000 & 1995 & 0.0004346 \\
+		1000 & 5000 & 1.245e-05 \\ \hline
+	\end{tabular}
+	\caption{ \label{tab:scalarXS} Cross section of the $pp \rightarrow h\chi\bar{\chi}$ process 
+		in units of pico-barn for the scalar mediator.}
+\end{table}
+
 
 \subsection{Higgs+MET signal from 2HDM model with a Z' and a new pseudoscalar}
 \label{subsec:Simulation}
